--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ group 'bg.dominos'
 version '1.0'
 sourceCompatibility = 11
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 application {
     mainClass.set("bg.dominos.MainApp")
     mainModule.set("MainModule")
@@ -73,7 +77,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     compile 'com.jfoenix:jfoenix:9.0.10'
-    compile 'org.controlsfx:controlsfx:11.0.0'
+    compile 'org.controlsfx:controlsfx:11.1.0'
 }
 
 repositories {
